<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:actionLayout="@layout/fragment_addnotes"
        android:title="Item"
        app:showAsAction="always" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_addNote"
            android:icon="@drawable/baseline_note_add_black_18dp"
            android:title="@string/menu_addNote" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
    <item
        android:id="@+id/nave_save"
        android:icon="@drawable/baseline_save_black_18dp"
        android:title="Save" />


    <item
        android:id="@+id/nave_lists"
        android:icon="@drawable/baseline_toc_black_18dp"
        android:title="Lists" />
    <item
        android:id="@+id/nav_list"
        android:icon="@drawable/baseline_label_black_18dp"
        android:title="List"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_showTodoList"
        android:icon="@drawable/baseline_toc_black_18dp"
        android:title="showList" />

    <item android:title="App-Configurations">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/baseline_settings_black_18dp"
                    android:title="Settings" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/baseline_help_black_18dp"
                    android:title="Help" />
            </group>
        </menu>
    </item>
</menu>